Play and pause using video.js works in both Chrome and Firefox

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,8 +3,9 @@ include ../Makefile.inc
 default: all
 
 # Note: These are in a very specific order.
-BEGINNING = start.xml start.html
-JAVASCRIPT = jwplayer.js jwplayer.html5.js dropbox.js mn.js
+CSS = video-js.css
+BEGINNING = start.xml start.html $(CSS)
+JAVASCRIPT = jquery.min.js video.js dropbox.js mn.js
 MIDDLE = body.html $(JAVASCRIPT)
 END = end.html end.xml
 
